--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
 
   <div class="section3">
-    <object class="pdf" data="C:\Users\HP\Downloads\Siddhant Thalal_B21ME066_IIT JODHPUR resume_internship IMP.pdf"
+    <object class="pdf" data="Resume_Siddhant_Thalal(B21ME066)_SDE.pdf"
       width=100% height=729.60px>
   </div>
   <script src="script5.js"></script>
