--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
 
   <div class="section6">
-    <object class="pdf" data="Quadruped leg.mp4"
+    <object class="pdf" data="Siddhant_B21ME066_robo.pdf"
       width=100% height=729.60px>
   </div>
   <!-- <a href="C:\Users\HP\Downloads\Siddhant Thalal_B21ME066_IIT JODHPUR resume_internship IMP.pdf" class="resume-link" download>Download My Resume</a>
